src-tauri/crates/appdb/tests/ui/sensitive/no_secure_fields.rs
use appdb::Sensitive;
use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, Sensitive)]
struct PlainRecord {
    pub issuer: String,
}

fn main() {}
